https://www.algaworks.com/aulas/2141/descrevendo-parametros-implicitos-em-operacoes/