@@ -1,6 +1,7 @@
 package br.com.siswbrasil.algafood.api.controller;
 
 import java.util.List;
+import java.util.Map;
 
 import javax.validation.Valid;
 
@@ -18,8 +19,6 @@ import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.ResponseStatus;
 import org.springframework.web.bind.annotation.RestController;
 
-import com.google.common.collect.ImmutableMap;
-
 import br.com.siswbrasil.algafood.api.assembler.PedidoInputDisassembler;
 import br.com.siswbrasil.algafood.api.assembler.PedidoModelAssembler;
 import br.com.siswbrasil.algafood.api.assembler.PedidoResumoModelAssembler;
@@ -35,6 +34,8 @@ import br.com.siswbrasil.algafood.domain.repository.PedidoRepository;
 import br.com.siswbrasil.algafood.domain.service.EmissaoPedidoService;
 import br.com.siswbrasil.algafood.infrastructure.repository.filter.PedidoFilter;
 import br.com.siswbrasil.algafood.infrastructure.repository.spec.PedidoSpecs;
+import io.swagger.annotations.ApiImplicitParam;
+import io.swagger.annotations.ApiImplicitParams;
 
 @RestController
 @RequestMapping(value = "/pedidos")
@@ -54,25 +55,28 @@ public class PedidoController {
 
 	@Autowired
 	private PedidoInputDisassembler pedidoInputDisassembler;
-
+	
+	@ApiImplicitParams({
+		@ApiImplicitParam(value = "Nomes das propriedades para filtrar na resposta, separados por vírgula",
+				name = "campos", paramType = "query", type = "string")
+	})
 	@GetMapping
-	public Page<PedidoResumoModel> pesquisar(PedidoFilter filtro, @PageableDefault(size = 10) Pageable pageable) {
-		pageable = traduzirPageable(pageable);		
-		Page<Pedido> pedidosPage = pedidoRepository.findAll(PedidoSpecs.usandoFiltro(filtro), pageable);
-		List<PedidoResumoModel> pedidosModel = pedidoResumoModelAssembler.toCollectionModel(pedidosPage.getContent());
-		Page<PedidoResumoModel> pedidosModelPage = new PageImpl<>(pedidosModel, pageable,
-				pedidosPage.getTotalElements());
-
-		return pedidosModelPage;
+	public Page<PedidoResumoModel> pesquisar(PedidoFilter filtro, 
+			@PageableDefault(size = 10) Pageable pageable) {
+		pageable = traduzirPageable(pageable);
+		
+		Page<Pedido> pedidosPage = pedidoRepository.findAll(
+				PedidoSpecs.usandoFiltro(filtro), pageable);
+		
+		List<PedidoResumoModel> pedidosResumoModel = pedidoResumoModelAssembler
+				.toCollectionModel(pedidosPage.getContent());
+		
+		Page<PedidoResumoModel> pedidosResumoModelPage = new PageImpl<>(
+				pedidosResumoModel, pageable, pedidosPage.getTotalElements());
+		
+		return pedidosResumoModelPage;
 	}
-
-	@GetMapping("/{codigoPedido}")
-	public PedidoModel buscar(@PathVariable String codigoPedido) {
-		Pedido pedido = emissaoPedido.buscarOuFalhar(codigoPedido);
-
-		return pedidoModelAssembler.toModel(pedido);
-	}
-
+	
 	@PostMapping
 	@ResponseStatus(HttpStatus.CREATED)
 	public PedidoModel adicionar(@Valid @RequestBody PedidoInput pedidoInput) {
@@ -91,14 +95,32 @@ public class PedidoController {
 		}
 	}
 	
+	@ApiImplicitParams({
+		@ApiImplicitParam(value = "Nomes das propriedades para filtrar na resposta, separados por vírgula",
+				name = "campos", paramType = "query", type = "string")
+	})
+	@GetMapping("/{codigoPedido}")
+	public PedidoModel buscar(@PathVariable String codigoPedido) {
+		Pedido pedido = emissaoPedido.buscarOuFalhar(codigoPedido);
+		
+		return pedidoModelAssembler.toModel(pedido);
+	}
+	
 	private Pageable traduzirPageable(Pageable apiPageable) {
-		var mapeamento = ImmutableMap.of(
+		var mapeamento = Map.of(
 				"codigo", "codigo",
+				"subtotal", "subtotal",
+				"taxaFrete", "taxaFrete",
+				"valorTotal", "valorTotal",
+				"dataCriacao", "dataCriacao",
 				"restaurante.nome", "restaurante.nome",
-				"cliente.nome", "cliente.nome",
-				"valorTotal", "valorTotal"
+				"restaurante.id", "restaurante.id",
+				"cliente.id", "cliente.id",
+				"cliente.nome", "cliente.nome"
 			);
 		
 		return PageableTranslator.translate(apiPageable, mapeamento);
 	}	
+
+	
 }
